--- a/Simple chat/templates/chat.html
+++ b/Simple chat/templates/chat.html
@@ -314,7 +314,7 @@ function getmessages () {
    
 }
 setInterval(getmessages,1000)
-setInterval(deletemessages,60000)
+setInterval(deletemessages,7200000)
       </script>
 </body>
 </html>
